--- a/main/index.html
+++ b/main/index.html
@@ -38,7 +38,6 @@
               <button type="submit"><i class="fas fa-search"></i></button>
             </form>
           </li>
-          <li><a href="login.html"><b>Log In</b></a></li>
         </ul>
       </div>
     </nav>
@@ -92,38 +91,59 @@
   <br>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col column1">
         <img src="images/kathmandu valley.jpeg" alt="" height="350px" width="500px">
-        <div class="places"><b>Nyatapola temple - Bhaktapur</b></div>
+        <div class="places">
+          <label>Nyatapola temple - Bhaktapur</label>
+          <p>Nyatapola Temple is a 5-storeyed Hindu temple. Meaning is Five Storeys Roofed Temple. Pagoda Style temple located in Bhaktapur, Nepal. </p>
+          <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
+        </div>
       </div>
       <div class="col">
         <div class="col1">
           <img src="images/chitwan.jpg" alt="" height="166px" width="250px">
-          <div class="places"><b>chitwan</b></div>
+          <div class="places">
+            <label>Chitwan</label>
+            <p>At the foot of the Himalayas, Chitwan is one of the few remaining undisturbed vestiges of the 'Terai' region.</p>
+            <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
+          </div>
         </div>
         <br>
         <div class="col1">
           <img src="images/lumbini.jpg" alt="" height="166px" width="250px">
-          <div class="places"><b>lumbini</b></div>
+          <div class="places">
+            <label>Lumbini</label>
+            <p>Siddhartha Gautama, the Lord Buddha, was born in 623 B.C. in the famous gardens of Lumbini, which soon became a place of pilgrimage.</p>
+            <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
+          </div>
         </div>
       </div>
 
       <div class="col">
         <div class="col2">
           <img src="images/pokhara.jpg" alt="" height="166px" width="250px">
-          <div class="places"><b>pokhara</b></div>
+          <div class="places">
+            <label>Pokhara</label>
+            <p>Pokhara is a city on Phewa Lake, in central Nepal. It’s known as a gateway to the Annapurna Circuit.</p>
+            <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
+          </div>
         </div>
         <br>
         <div class="col2">
           <img src="images/sagarmatha.jpg" alt="" height="166px" width="250px">
-          <div class="places"><b>sagarmatha</b></div>
+          <div class="places">
+            <label>Sagarmatha</label>
+            <p>Mount Everest is Earth's highest mountain above sea level, located in the Mahalangur Himal sub-range of the
+              Himalayas.</p>
+            <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
+          </div>
         </div>
       </div>
     </div>
     <br>
     <br>
     <section class="explore">
-      <button class="explore-more" type="submit"><b>Explore more..</b></button>
+      <a href="destination.html" class="explore-more"><b>Explore more..</b></a>
     </section>
   </div>
   <br>
@@ -203,31 +223,46 @@
   <br>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col column1">
         <img src="images/mountaineering.jpeg" alt="" height="350px" width="500px">
-        <div class="places"><b>Mountaineering</b></div>
+        <div class="places">
+          <label>Mountaineering</label>
+          <p>Mountaineering (also referred to as 'mountain climbing' or ―mainly in Europe― 'Alpinism') is the sport of climbing a mountain. Regardless of the length of the trip ―which can range from a few hours to multi-day expeditions―, mountaineering is more physically demanding than hiking.</p>
+        </div>
       </div>
       <div class="col">
         <div class="col1">
           <img src="images/cycling.jpg" alt="" height="166px" width="250px">
-          <div class="places"><b>Cycling</b></div>
+          <div class="places">
+            <label>Cycling</label>
+          <p>Cycling, also called bicycling or biking, is the use of bicycles for transport, recreation, exercise or sport.</p>
+          </div>
         </div>
         <br>
         <div class="col1">
           <img src="images/nepal nature enjoy.jpg" alt="" height="166px" width="250px">
-          <div class="places"><b>View Enjoy</b></div>
+          <div class="places">
+            <label>View Enjoy</label>
+          <p>Human beings have always enjoyed viewing beautiful scenery. There's something innately peaceful and relaxing about it.</p>
+          </div>
         </div>
       </div>
 
       <div class="col">
         <div class="col2">
           <img src="images/pashupatinath tour.jpeg" alt="" height="166px" width="250px">
-          <div class="places"><b>Tirtha Yatra</b></div>
+          <div class="places">
+            <label>Tirtha Yatra</label>
+          <p>Tirtha Yatra means sadhu-sanga, hari-katha, vigraha-aradhana, dhama-seva, prasada-sevana, dana-kriya and bhajana.</p>
+          </div>
         </div>
         <br>
         <div class="col2">
           <img src="images/trekking.jpeg" alt="" height="166px" width="250px">
-          <div class="places"><b>Trekking</b></div>
+          <div class="places">
+            <label>Trekking</label>
+          <p>Trekking generally means a multi-day hike in the mountains — in this case, on trails throughout Nepal's Himalayan mountains and foothills.</p>
+          </div>
         </div>
       </div>
     </div>
