--- a/main/destination.html
+++ b/main/destination.html
@@ -35,7 +35,6 @@
               <button type="submit"><i class="fas fa-search"></i></button>
             </form>
           </li>
-          <li><a href="login.html"><b>Log In</b></a></li>
         </ul>
       </div>
     </nav>
@@ -61,7 +60,7 @@
         </div>
 
         <div class="column3">
-          <button type="button" class="book-now">Book Now</button>
+          <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
         </div>
 
       </div>
@@ -83,7 +82,7 @@
         </div>
 
         <div class="column3">
-          <button type="button" class="book-now">Book Now</button>
+          <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
         </div>
 
       </div>
@@ -105,7 +104,7 @@
         </div>
 
         <div class="column3">
-          <button type="button" class="book-now">Book Now</button>
+          <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
         </div>
 
       </div>
@@ -127,7 +126,70 @@
         </div>
 
         <div class="column3">
-          <button type="button" class="book-now">Book Now</button>
+          <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="section1">
+    <div class="container">
+      <div class="row">
+        <div class="column1">
+          <img src="images/chitwan.jpg" alt="chitwan" class="">
+        </div>
+
+        <div class="column2">
+          <h3 class="BDS">Chitwan</h3>
+          <br>
+          <p>At the foot of the Himalayas, Chitwan is one of the few remaining undisturbed vestiges of the 'Terai' region, which formerly extended over the foothills of India and Nepal. It has a particularly rich flora and fauna.</p>
+        </div>
+
+        <div class="column3">
+          <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="section1">
+    <div class="container">
+      <div class="row">
+        <div class="column1">
+          <img src="images/lumbini.jpg" alt="lumbini" class="">
+        </div>
+
+        <div class="column2">
+          <h3 class="BDS">Lumbini</h3>
+          <br>
+          <p>Siddhartha Gautama, the Lord Buddha, was born in 623 B.C. in the famous gardens of Lumbini, which soon became a place of pilgrimage. Among the pilgrims was the Indian emperor Ashoka, who erected one of his commemorative pillars there.</p>
+        </div>
+
+        <div class="column3">
+          <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="section1">
+    <div class="container">
+      <div class="row">
+        <div class="column1">
+          <img src="images/pokhara.jpg" alt="pokhara" class="">
+        </div>
+
+        <div class="column2">
+          <h3 class="BDS">Pokhara</h3>
+          <br>
+          <p>Pokhara is a city on Phewa Lake, in central Nepal. It’s known as a gateway to the Annapurna Circuit, a popular trail in the Himalayas. Tal Barahi Temple, a 2-story pagoda, sits on an island in the lake.</p>
+        </div>
+
+        <div class="column3">
+          <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
         </div>
 
       </div>
@@ -148,7 +210,7 @@
           <div class="contact">
             <p class="phone-no"><i class="fas fa-phone-square-alt"></i> &nbsp;&nbsp;&nbsp;&nbsp; 01-1234567
               <br>
-              <i class="fas fa-envelope-square"></i> &nbsp;&nbsp;&nbsp;&nbsp; info@t&t.com
+              <i class="fas fa-envelope-square"></i> &nbsp;&nbsp;&nbsp;&nbsp; info@tours&travels.com
             </p>
             <p>
               <i class="fab fa-facebook"></i> &nbsp;&nbsp;&nbsp;&nbsp; <i class="fab fa-twitter"></i>
@@ -173,16 +235,14 @@
             <input class="your-email" type="text" placeholder="Your Email...">
           </form>
           <br>
-          <button type="submit" class="subscribe"
-            onclick="alert('*---Thanks for Joining with Us---*')">subscribe</button>
+          <button type="submit" class="subscribe">subscribe</button>
         </div>
 
       </div>
     </div>
 
     <div class="copyright">
-      <p><b>copyright &copy;2021: All Rights reserved by ---> Tour and Travels - Nepal || Since 2020
-        </b></p>
+      <p><b>copyright &copy;2021: All Rights reserved by Tours And Travels</b></p>
     </div>
   </footer>
   <script type="text/javascript" src="home.js">
