Fix all the issue and complete frontend part

--- a/main/gallery.html
+++ b/main/gallery.html
@@ -90,13 +90,13 @@
   <!-- 2nd column -->
   <div class="container">
     <div class="row">
-      <div class="column">
+      <div class="column1">
         <img src="images/lake-pokhara.jpg" alt="">
         <img src="images/lumbini.jpg" alt="">
         <img src="images/dashain.jpg" alt="">
         <img src="images/nepal nature enjoy.jpg" alt="">
       </div>
-      <div class="column">
+      <div class="column2">
         <img src="images/temple.jpeg" alt="">
         <img src="images/kathmandu valley.jpeg" alt="">
         <img src="images/bisket jatra.jpg" alt="">
@@ -110,18 +110,18 @@
     <img src="images/gaijatra.jpg" alt="">
   </section>
   <!-- 4th column -->
-  <span id="dots">...</span>
+  <span id="dots"></span>
   <span id="more">
 
     <div class="container">
       <div class="row">
-        <div class="column">
+        <div class="column1">
           <img src="images/trekking.jpeg" alt="">
           <img src="images/sagarmatha.jpg" alt="">
           <img src="images/holi.jpg" alt="">
           <img src="images/image1.jpg" alt="">
         </div>
-        <div class="column">
+        <div class="column2">
           <img src="images/cycling.jpg" alt="">
           <img src="images/village.jpg" alt="">
           <img src="images/Bhaktapur Durbar Square.jpg" alt="">
