--- a/main/index.html
+++ b/main/index.html
@@ -9,8 +9,6 @@
   <link rel="stylesheet" type="text/css" href="CSS/event.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
   <title>Tours and Travels</title>
 </head>
@@ -83,7 +81,7 @@
       <label for="radio4" class="manual-btn"></label>
     </div>
   </div>
-
+  <br>
   <!-- Discover Nepal -->
   <div>
     <h1 class="discover">Discover Nepal</h1>
@@ -91,64 +89,60 @@
   <br>
   <div class="container">
     <div class="row">
-      <div class="col column1">
-        <img src="images/kathmandu valley.jpeg" alt="" height="350px" width="500px">
+      <div class="column1">
+        <img src="images/kathmandu valley.jpeg" alt="">
         <div class="places">
           <label>Nyatapola temple - Bhaktapur</label>
           <p>Nyatapola Temple is a 5-storeyed Hindu temple. Meaning is Five Storeys Roofed Temple. Pagoda Style temple located in Bhaktapur, Nepal. </p>
           <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
         </div>
       </div>
-      <div class="col">
-        <div class="col1">
-          <img src="images/chitwan.jpg" alt="" height="166px" width="250px">
+
+      <div class="column2">
+          <div class="column2-1">
+            <img src="images/chitwan.jpg" alt="">
           <div class="places">
             <label>Chitwan</label>
             <p>At the foot of the Himalayas, Chitwan is one of the few remaining undisturbed vestiges of the 'Terai' region.</p>
             <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
           </div>
-        </div>
-        <br>
-        <div class="col1">
-          <img src="images/lumbini.jpg" alt="" height="166px" width="250px">
+          </div>
+
+          <div class="column2-2">
+            <img src="images/lumbini.jpg" alt="">
           <div class="places">
             <label>Lumbini</label>
             <p>Siddhartha Gautama, the Lord Buddha, was born in 623 B.C. in the famous gardens of Lumbini, which soon became a place of pilgrimage.</p>
             <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
           </div>
-        </div>
+          </div>
       </div>
 
-      <div class="col">
-        <div class="col2">
-          <img src="images/pokhara.jpg" alt="" height="166px" width="250px">
-          <div class="places">
-            <label>Pokhara</label>
-            <p>Pokhara is a city on Phewa Lake, in central Nepal. It’s known as a gateway to the Annapurna Circuit.</p>
-            <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
+      <div class="column3">
+          <div class="column3-1">
+            <img src="images/pokhara.jpg" alt="">
+            <div class="places">
+              <label>Pokhara</label>
+              <p>Pokhara is a city on Phewa Lake, in central Nepal. It’s known as a gateway to the Annapurna Circuit.</p>
+              <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
+            </div>
           </div>
-        </div>
-        <br>
-        <div class="col2">
-          <img src="images/sagarmatha.jpg" alt="" height="166px" width="250px">
-          <div class="places">
-            <label>Sagarmatha</label>
-            <p>Mount Everest is Earth's highest mountain above sea level, located in the Mahalangur Himal sub-range of the
-              Himalayas.</p>
-            <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
+          <div class="column3-2">
+            <img src="images/sagarmatha.jpg" alt="">
+            <div class="places">
+              <label>Sagarmatha</label>
+              <p>Mount Everest is Earth's highest mountain above sea level, located in the Mahalangur Himal sub-range of the
+                Himalayas.</p>
+              <button type="button"><a href="register.html" class="book-now">Book Now</a></button>
+            </div>
           </div>
-        </div>
       </div>
     </div>
-    <br>
-    <br>
-    <section class="explore">
-      <a href="destination.html" class="explore-more"><b>Explore more..</b></a>
-    </section>
+    
   </div>
-  <br>
-  <br>
-  <br>
+  <section class="explore">
+        <a href="destination.html" class="explore-more"><b>Explore more..</b></a>
+  </section>
   <br>
 
   <!-- Upcoming Events -->
@@ -223,24 +217,24 @@
   <br>
   <div class="container">
     <div class="row">
-      <div class="col column1">
-        <img src="images/mountaineering.jpeg" alt="" height="350px" width="500px">
+      <div class="column1">
+        <img src="images/mountaineering.jpeg" alt="">
         <div class="places">
           <label>Mountaineering</label>
           <p>Mountaineering (also referred to as 'mountain climbing' or ―mainly in Europe― 'Alpinism') is the sport of climbing a mountain. Regardless of the length of the trip ―which can range from a few hours to multi-day expeditions―, mountaineering is more physically demanding than hiking.</p>
         </div>
       </div>
-      <div class="col">
-        <div class="col1">
-          <img src="images/cycling.jpg" alt="" height="166px" width="250px">
+      <div class="column2">
+        <div class="column2-1">
+          <img src="images/cycling.jpg" alt="">
           <div class="places">
             <label>Cycling</label>
           <p>Cycling, also called bicycling or biking, is the use of bicycles for transport, recreation, exercise or sport.</p>
           </div>
         </div>
         <br>
-        <div class="col1">
-          <img src="images/nepal nature enjoy.jpg" alt="" height="166px" width="250px">
+        <div class="column2-2">
+          <img src="images/nepal nature enjoy.jpg" alt="">
           <div class="places">
             <label>View Enjoy</label>
           <p>Human beings have always enjoyed viewing beautiful scenery. There's something innately peaceful and relaxing about it.</p>
@@ -248,23 +242,24 @@
         </div>
       </div>
 
-      <div class="col">
-        <div class="col2">
-          <img src="images/pashupatinath tour.jpeg" alt="" height="166px" width="250px">
+      <div class="column3">
+        <div class="column3-1">
+          <img src="images/pashupatinath tour.jpeg" alt="" >
           <div class="places">
             <label>Tirtha Yatra</label>
           <p>Tirtha Yatra means sadhu-sanga, hari-katha, vigraha-aradhana, dhama-seva, prasada-sevana, dana-kriya and bhajana.</p>
           </div>
         </div>
         <br>
-        <div class="col2">
-          <img src="images/trekking.jpeg" alt="" height="166px" width="250px">
+        <div class="column3-2">
+          <img src="images/trekking.jpeg" alt="">
           <div class="places">
             <label>Trekking</label>
           <p>Trekking generally means a multi-day hike in the mountains — in this case, on trails throughout Nepal's Himalayan mountains and foothills.</p>
           </div>
         </div>
       </div>
+    </div>
     </div>
     <br>
     <br>
